--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,11 @@
 body {
+  background-image: url('https://www.moneycrashers.com/wp-content/uploads/2014/07/volunteer-group-raising-hands-sky-cloud.jpg');
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+    background-repeat: no-repeat;
+    background-size: cover;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
